<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>SBI_SettingsDialog</class>
 <widget class="QWidget" name="SBI_SettingsDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>343</width>
    <height>204</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>StatusBar Icons</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_2">
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
      <spacer name="horizontalSpacer_3">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QLabel" name="label">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <property name="pixmap">
        <pixmap resource="statusbaricons.qrc">:/sbi/data/icon.png</pixmap>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLabel" name="label_2">
       <property name="text">
        <string>&lt;h3&gt;StatusBar Icons&lt;/h3&gt;</string>
       </property>
      </widget>
     </item>
     <item>
      <spacer name="horizontalSpacer_4">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QLabel" name="label_3">
     <property name="text">
      <string>These icons will be displayed in statusbar:</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <spacer name="horizontalSpacer_2">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <widget class="QCheckBox" name="showImagesIcon">
         <property name="text">
          <string>Images Icon</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QCheckBox" name="showJavaScriptIcon">
         <property name="text">
          <string>JavaScript Icon</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QCheckBox" name="showNetworkIcon">
         <property name="text">
          <string>Network Icon</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QCheckBox" name="showZoomWidget">
         <property name="text">
          <string>Zoom widget</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QCheckBox" name="showIdleInhibitorIcon">
         <property name="text">
          <string>Idle Inhibitor Icon</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QDialogButtonBox" name="buttonBox">
     <property name="standardButtons">
      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources>
  <include location="statusbaricons.qrc"/>
 </resources>
 <connections/>
</ui>
